# clipture-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_linux.sh  build_windows.ps1  copy_deps.sh  index.html  link.sh  package.json  pnpm-lock.yaml  run.sh  tailwind.config.js  vite.config.ts
installation-updater/: Cargo.toml  README.md
installation-updater/src/: main.rs
patches/: @rspc__client@0.2.4.patch  @rspc__tauri@0.2.0.patch
src/: App.tsx  bindings.ts  bootstrap.html  main.html  main.rs  main.tsx
src-tauri/: Cargo.toml  Makefile.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: before_bundle.js  before_dev.js
src-tauri/src/: main.rs  obs.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/auth/: mod.rs
src-tauri/src/core/game_detection/: event.rs  mod.rs  refresh.rs
src-tauri/src/core/obs/: capture.rs  mod.rs  runtime.rs
src-tauri/src/crash_handler/: mod.rs
src-tauri/src/json_typings/: mod.rs
src-tauri/src/json_typings/clipture_api/: mod.rs
src-tauri/src/json_typings/clipture_api/game/: detection.rs  mod.rs
src-tauri/src/json_typings/clipture_api/validation/: report.rs
src-tauri/src/obs/: initialization.rs  mod.rs  monitor_test.rs
src-tauri/src/routes/: auth.rs  bootstrap.rs  game_detect.rs  mod.rs
src-tauri/src/routes/bootstrap/: download.rs  extract.rs  login.rs  mod.rs  obs.rs  verify.rs  window.rs
src-tauri/src/routes/obs/: mod.rs  preview.rs
src-tauri/src/rpc/: mod.rs
src-tauri/src/rpc/bootstrap/: mod.rs
src-tauri/src/utils/: consts.rs  crash_handler.rs  dir.rs  mod.rs  rspc.rs  util.rs
src/bootstrap/: App.css  App.tsx  bootstrap.tsx
src/main/: App.css  App.tsx  main.tsx
src/main/components/Preview/: Preview.tsx
src/main/components/Titlebar/: Titlebar.tsx  titlebar.css
src/misc/: bindings.ts  client.ts  main.css  react.tsx
