[package]
name = "clipture"
version = "0.0.0"
description = "A Tauri App"
authors = ["sshcrack"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Async Runtime
tokio = { version = "1.41.0", features = ["full"] }
async-stream = "0.3.6"
async-trait = "0.1.83"
tauri = { version = "2", features = [] }
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio-util = "0.7.12"

# OBS
libobs-wrapper = { path = "../../libobs-rs/libobs-wrapper", features = [
    "unsafe-send",
] }
libobs-sources = { path = "../../libobs-rs/libobs-sources" }
libobs-window-helper = { path = "../../libobs-rs/libobs-window-helper", features = ["serde", "specta"] }


serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0.92", features = ["backtrace"] }

# Crash Handling
crash-handler = "0.6.2"
minidumper = "0.8.3"

directories = "5.0.1"
lazy_static = "1.5.0"
log = "0.4.22"


# RPC and Specta
rspc = { version = "0.2.0", features = [
    "specta2",
] } # <- The specta2 feature is what makes this all work
rspc-tauri2 = { git = "https://github.com/sshcrack/tauri2-tauri-update" }
tauri-specta = { version = "2.0.0-rc.20", features = [
    "javascript",
    "typescript",
] }
specta = { package = "specta", version = "=2.0.0-rc.20", features = [
    "serde",
    "interop",
] }


# For OBS extraction
sevenz-rust = "0.6.1"
reqwest = "0.12.9"
hex = "0.4.3"
sha2 = "0.10.8"
semver = "1.0.23"


# Api AUTH
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
open = "5.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
whoami = "1.5.2"


# Tauri Plugins
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
tauri-plugin-log = { version = "2" }
tauri-plugin-dialog = "2.0.3"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

windows-icons = "0.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
show-console = []

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.

# I know these do nothing in a Cargo workspace but this should help if people copy this example.
[patch.crates-io]
# Interop support
specta = { git = "https://github.com/oscartbeaumont/specta", tag = "v2.0.0-rc.20" }
rspc = { git = "https://github.com/sshcrack/rspc", branch = "specta-update" }
